# AI_Smart_Industry_Map

./: .env.example  .gitignore  Makefile  README.md
backend/: cli.py  pyproject.toml
backend/app/: main.py
backend/app/api/: ai.py  companies.py  daily.py  meta.py  queries.py  search.py  serializers.py  topic_map.py  topics.py
backend/app/core/: config.py
backend/app/db/: base.py  models.py  seed.py
backend/app/llm/: __init__.py  anthropic_.py  factory.py  mock.py  openai_compat.py  provider.py
backend/app/pipeline/: jobs.py  jobs_backfill.py  jobs_daily.py  jobs_monthly.py  runner.py  scheduler.py
backend/app/services/: __init__.py  analysis.py
backend/scripts/: record_fixtures.py
backend/tests/: conftest.py  test_analysis.py  test_api_ai.py  test_api_companies.py  test_api_daily.py  test_api_meta.py  test_api_search.py  test_api_topic_detail.py  test_api_topic_map.py  test_api_topics.py  test_config.py  test_error_handler.py  test_jobs.py  test_llm.py  test_models.py  test_runner.py  test_scheduler.py  test_seed.py  test_serializers.py  test_source_yahoo_quotes.py  test_sources.py
backend/tests/fixtures/: mops_listed.json  mops_otc.json  revenue_listed.json  revenue_otc.json  tdcc_holders.csv  tpex_daily_close.json  tpex_history.json  tpex_history_nodata.json  tpex_institutional.json  tpex_institutional_holiday.json  tpex_peratio.json  twse_bfi82u.json  twse_bfi82u_holiday.json  twse_bwibbu_all.json  twse_bwibbu_history.json  twse_history.json  twse_history_nodata.json  twse_margin.json  twse_margin_holiday.json  twse_stock_day_all.json  twse_t86.json  (+4 more)
(+270 files in other folders)
