[project]
name = "backend"
version = "0.1.0"
description = "AI 智慧產業地圖後端——FastAPI + SQLite"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.3",
    "curl-cffi>=0.15.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
